--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,11 +11,11 @@ h2 {
 }
 
 h3 {
-  font-family: "verdana": sans-serif;
+  font-family: "verdana", sans-serif;
 }
 
 h4 {
-  font-family: "verdana": sans-serif;
+  font-family: "verdana", sans-serif;
 }
 
 p {
