--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,6 +9,10 @@ h1 {
 
 .MyDiv {
   text-align: center;
+  background-color:#1D09AF;
+  width: 70px;
+  height: 70px;
+  position: absolute;
 }
 h2 {
   font-family: "verdana", sans-serif;
