--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -12,7 +12,7 @@ h1 {
   background-color:#1D09AF;
   width: 70px;
   height: 70px;
-  position: absolute;
+  position: relative;
 }
 h2 {
   font-family: "verdana", sans-serif;
