--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,6 +10,14 @@ h1 {
 .MyDiv {
   text-align: center;
   background-color:#1D09AF;
+ border-bottom: 1px solid #1D09AF;
+  overflow-y: auto;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  z-index: 1000;
 }
 h2 {
   font-family: "verdana", sans-serif;
