--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -24,6 +24,19 @@ h1 {
   position: fixed;
   top: 125px;
 }
+
+.stats {
+  position:fixed;
+}
+
+.question {
+  position:fixed;
+}
+
+.end{
+  position:fixed;
+}
+
 h2 {
   font-family: "verdana", sans-serif;
 }
