--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,7 +11,7 @@ h1 {
   text-align: center;
   background-image:url("https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/IMG_20170102_163643.jpg");
   background-repeat:no-repeat;
-  background-size:contain;
+  background-size:cover;
   overflow:hidden;
 }
 
