--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,12 +9,13 @@ h1 {
 
 .MyDiv {
   text-align: center;
-  background-image:url("https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/IMG_20170102_163643.jpg");
+}
+  /*background-image:url("https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/IMG_20170102_163643.jpg");
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
   overflow:hidden;
-}
+*/
 
 .intro {
 }
