--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color:skyblue;
+  background-color:lightblue;
 }
 
 h1 {
@@ -55,5 +55,5 @@ font-family: "verdana", sans-serif;
 }
 
 a:hover {
-    color:cyan;
+    color:aqua;
     )
