--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color:azure;
+  background-color:lightskyblue;
 }
 
 h1 {
@@ -9,13 +9,12 @@ h1 {
 
 .MyDiv {
   text-align: center;
-}
-  /*background-image:url("https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/IMG_20170102_163643.jpg");
+  background-image:url("https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/IMG_20170102_163643.jpg");
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
   overflow:hidden;
-*/
+}
 
 .mydiv2 {
   text-align: center;
