--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13,7 +13,11 @@ h1 {
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
+  background-color:dodgerblue;
   overflow:hidden;
+  height:400px;
+  width:300px;
+  
 }
 
 .mydiv2 {
