--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,8 +15,8 @@ h1 {
   background-position:center;
   background-color:dodgerblue;
   overflow:hidden;
-  height:400px;
-  width:300px;
+  /*height:400px;
+  width:300px;*/
   margin:center;
   
 }
