--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -16,8 +16,8 @@ h1 {
   background-color:dodgerblue;
   overflow:hidden;
   /*height:400px;
-  width:300px;*/
-  margin:center;
+  width:300px;
+  margin:center;*/
   
 }
 
