--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -16,7 +16,7 @@ h1 {
   background-color:dodgerblue;
   background-origin:content-box;
   overflow:hidden;
-  padding-top:20px;
+  padding: 45px;
   /*height:400px;
   width:300px;
   margin:center;*/
