--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -18,8 +18,8 @@ h1 {
   overflow:hidden;
   padding:70px;
   /*height:400px;
-  width:300px;
-  margin:center;*/
+  width:300px;*/
+  margin: 0.75cm 0cm 0cm 0cm;
   
 }
 
